# allianceauth-hr-apps

./: .coveragerc  .prettierignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
hrapps/: __init__.py  admin.py  apps.py  auth_hooks.py  managers.py  models.py  urls.py  views.py
hrapps/migrations/: 0001_initial.py
hrapps/templates/hrapps/: corpchoice.html  management.html  searchview.html  view.html
hrapps/templates/hrapps/partials/modals/: search.html
