[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allianceauth-hr-apps"
dynamic = ["version"]
description = "Alliance Auth Plugin"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ak", email = "aaronkable@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "allianceauth>=3.8.1",
]

[project.urls]
Homepage = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-complete-activity-tracker"

[tool.hatch.version]
path = "hrapps/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/hrapps",
]

[tool.hatch.build.targets.wheel]
packages = ["hrapps"]
